--- a/CB_proj_Test/Views/AdminPanel/GetUsers.cshtml
+++ b/CB_proj_Test/Views/AdminPanel/GetUsers.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<UserModel>
+﻿@using Microsoft.AspNetCore.Identity;
+@model IEnumerable<IdentityUser>
 @{
     ViewData["Title"] = "GetUsers";
 }
@@ -22,7 +23,7 @@
                 <h5 class="card-title">@user.UserName</h5>
             </div>
             <div class="card-footer">
-                <a asp-area="Identity" asp-page="/Account/Manage/ChangePassword" asp-route-id="@user.Id" class="btn btn-danger">Manage password</a>
+                <a asp-area="Identity" asp-page="/AdminPanel/Edit" asp-route-id="@user.Id" class="btn btn-danger">Edit User</a>
                 <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger">Delete</a>
             </div>
         </div>
